--- a/style.css
+++ b/style.css
@@ -291,6 +291,8 @@ body {
     margin: 20px auto 0px;
     padding: 20px;
     box-shadow: inset 0px 0px 30px 1px rgb(0, 0, 0);
+    background: linear-gradient(to bottom, rgb(255, 255, 255, 0), rgb(0, 0, 0, 1) 10%);
+    background: linear-gradient(to top, rgb(255, 255, 255, 0), rgb(0, 0, 0, 1) 10%);
 }
 
 .heady {
