--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ body {
     width: 100%;
     box-shadow: 0px 7px 10px 1px rgb(188, 188, 188);
     padding: 2px;
-    font-size: medium;
+    font-size: 12pt;
     margin: 0px auto 10px;
 }
 
