--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Calibri;
+    src: url(/fonts/font.ttf);
 }
 
 html,
